<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/colorPrimaryVariant"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/characterPicture"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/characterName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/characterPicture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@tools:sample/full_names" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/cardInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/cardHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/CardInfoLayout">

                    <TextView
                        style="@style/CardInfo.Property"
                        android:id="@+id/characterGender"
                        android:text="@string/gender" />

                    <TextView
                        style="@style/CardInfo.Value"
                        android:id="@+id/characterGenderValue"
                        tools:text="value" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLayout">

                    <TextView
                        style="@style/CardInfo.Property"
                        android:id="@+id/characterBirth"
                        android:text="@string/birthday" />

                    <TextView
                        style="@style/CardInfo.Value"
                        android:id="@+id/characterBirthValue"
                        tools:text="value" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLayout">

                    <TextView
                        style="@style/CardInfo.Property"
                        android:id="@+id/characterSpecies"
                        android:text="@string/species" />

                    <TextView
                        style="@style/CardInfo.Value"
                        android:id="@+id/characterSpeciesValue"
                        tools:text="value" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLayout">

                    <TextView
                        style="@style/CardInfo.Property"
                        android:id="@+id/characterPatronus"
                        android:text="@string/patronus" />

                    <TextView
                        style="@style/CardInfo.Value"
                        android:id="@+id/characterPatronusValue"
                        tools:text="value" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLayout">

                    <TextView
                        style="@style/CardInfo.Property"
                        android:id="@+id/characterAncestry"
                        android:text="@string/ancestry" />

                    <TextView
                        style="@style/CardInfo.Value"
                        android:id="@+id/characterAncestryValue"
                        tools:text="value" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLayout">

                    <TextView
                        style="@style/CardInfo.Property"
                        android:id="@+id/characterAlive"
                        android:text="@string/is_alive" />

                    <TextView
                        style="@style/CardInfo.Value"
                        android:id="@+id/characterAliveValue"
                        tools:text="value" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLayout">

                    <TextView
                        style="@style/CardInfo.Property"
                        android:id="@+id/characterHogwarts"
                        android:text="@string/hogwarts" />

                    <TextView
                        style="@style/CardInfo.Value"
                        android:id="@+id/characterHogwartsValue"
                        tools:text="value" />

                </LinearLayout>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:background="@color/colorSection"
                android:elevation="8dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                    android:id="@+id/wandInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/wand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/wand"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <LinearLayout
                        style="@style/CardInfoLayout">

                        <TextView
                            style="@style/CardInfo.Property"
                            android:id="@+id/wandWood"
                            android:text="@string/wandWood" />

                        <TextView
                            style="@style/CardInfo.Value"
                            android:id="@+id/wandWoodValue"
                            tools:text="value" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/CardInfoLayout">

                        <TextView
                            style="@style/CardInfo.Property"
                            android:id="@+id/wandCore"
                            android:text="@string/wandCore" />

                        <TextView
                            style="@style/CardInfo.Value"
                            android:id="@+id/wandCoreValue"
                            tools:text="value" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/CardInfoLayout">

                        <TextView
                            style="@style/CardInfo.Property"
                            android:id="@+id/wandLength"
                            android:text="@string/wandLength" />

                        <TextView
                            style="@style/CardInfo.Value"
                            android:id="@+id/wandLengthValue"
                            tools:text="value" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>